DataAnnotations validation added(client(using @Html.DisplayFor) & server(using ModelState.IsValid))

--- a/NewsWebSite/Views/Home/Index.cshtml
+++ b/NewsWebSite/Views/Home/Index.cshtml
@@ -1,206 +1,166 @@
-﻿<!DOCTYPE html>
-@using NewsWebSite.Models
-@model ModelForListItemPage
+﻿
+@using NewsWebSite.Models.ViewModel
+@model ListItemPageModel
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/Lay.cshtml";
 }
-<html>
-<head>
-    <title>NEWS</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link href="~/Content/Site.css" rel="stylesheet" />
-    <script type="text/javascript" src="~/Scripts/jquery-3.1.1.js"></script>
-    <script type="text/javascript" src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
 
-
-</head>
-<body>
-    @*<form method="post">
-            <input type="hidden" name="CurPage" value="@Model.PageNumber" />
-               <input type="hidden" name="CurItemOnPageCnt" value="@Model.NumberOfItemsOnPage"/>
-            <div class="info">
-                 <p><input type="text" name="ItemsOnPageTB" value="@Model.NumberOfItemsOnPage"/></p>
-                    <p><input type="submit" name="BtnForItemsOnPBtn" value="OK"/></p>
-
-                <p>Page: @Model.PageNumber</p>
-                  <p>Pages Count: @Model.NumberOfPages</p>
-                    @for (int i = 1; i <= Model.NumberOfPages; i++)
-                    {
-                        <a href="/Home/Index?page=@i.ToString()"> @i.ToString() </a>
-                    }
-            </div>
-        </form>
-        <hr />*@
-   @* <a href="#myDiv">click me</a>*@
-    <button onclick="ScrollTo('#dimas');">Click Me</button>
-    <div id="message">Recorded <b>0</b> clicks</div>
-    <hr />
-    <br />
-    <div class="articles" id="articles">
-        @foreach (var a in Model.ArticleList)
-        {
-            <div class="article">
-                <a id="@a.Id" href="Home/Article?id=@a.Id" onclick="Redirect(@a.Id);">@a.Title</a>
-                .@*    <button id="btn-@a.Id" onclick="Redirect(@a.Id);">@a.Title</button>*@
-                <p>@a.Id</p>
-            </div>
-            <hr />
-        }
-    </div>
-
-    <div id="dimas">content</div>
+<div id="news_panel" class="news_panel">
+    @foreach (var a in Model.ArticleList)
+    {
+        <div class="news_item">
+            <h3><a id="@a.Id" href="@Url.Action("Article", new {Id = a.Id})" onclick="Redirect(@a.Id);">@a.Title.Substring(0, (a.Title.Length <= 15 ? a.Title.Length : 15))</a></h3>
+            <span class="time">@a.CreateDate</span>
+            <div><img alt="IMG" class="images" src="~/Content/UserImages/@a.Id/@a.Image"></div>
+        </div>
+    }
+</div>
+@*TOFIX!-------------------------
+    @{
         <script type="text/javascript">
-            //var bool = false;
-            var inProgress = false;
-            var startFrom = @Model.PageNumber;
-            var lastid = 0;
-
-            function RequestArticles(runAtStart) {
-                // if (startFrom < @Model.NumberOfPages && !inProgress && ($(window).scrollTop() >= $(document).height() - $(window).height() - 200 || $(window).height() >= $(document).height())){
-
-                $.ajax({
-                    url: '/Home/GetNewPageOfArticles',
-                    method: 'POST',
-                    async: true,
-                    data: { "Page": startFrom },
-                    beforeSend: function () {
-                        inProgress = true;
-                    }
-                }).done(function (data) {
-                    //alert("loaded!"+startFrom);
-                    data = jQuery.parseJSON(data);
-                    if (data.length > 0) {
-                        lastid =data[0].Id;
-                        //console.log(data);
-                       // location.hash
-                        $.each(data, function (index, data) {
-                            $("#articles").append("<div class=\"article\"><p><a id=\"btn-" + data.Id + "\" href=\"Home/Article?Id=" + data.Id + "\" onclick=\"Redirect(" + data.Id + ");\">" + data.Title + "</a></p></div><p>"+data.Id+"</p><hr/>");
-                        });
-
-                    }
-                    startFrom ++;
-                    location.hash=startFrom-1+':'+lastid;
-                    inProgress = false;
-                    //location.hash = startFrom;
-                   // if(runAtStart && startFrom < @Model.NumberOfPages && !inProgress && $(window).height() >= $(document).height()) RequestArticles(true);
-                   
-                });
-                // }
-            }
-            function GetNPagesOfArticles(page)
-            {
-                $.ajax({
-                    url: '/Home/GetNPagesOfArticles',
-                    method: 'POST',
-                    async: false,
-                    data: { "n": page + 1 },
-                    beforeSend: function () {
-                        inProgress = true;
-                    }
-                }).done(function (data) {
-                    //alert("loaded!"+startFrom);
-                    data = jQuery.parseJSON(data);
-                    if (data.length > 0)
-                    {
-                      //  alert("loadingNpages");
-                        //console.log(data);
-                        //  location.hash
-                        
-                        $.each(data, function (index, data) {
-                            $("#articles").append("<div class=\"article\"><p><a id=\"btn-" + data.Id + "\" href=\"Home/Article?Id=" + data.Id + "\" onclick=\"Redirect(" + data.Id + ");\">" + data.Title + "</a></p> </div><p>"+data.Id+"</p><hr/>");
-                          @* <a id="@a.Id" href="Home/Article?id=@a.Id" onclick="Redirect(@a.Id);">@a.Title</a>*@
-                        });
-
-                    }
-                    startFrom = page + 1;
-                //    bool = true;
-                  //  alert(startFrom);
-                    inProgress = false;
-                   // if(startFrom < @Model.NumberOfPages && !inProgress && $(window).height() >= $(document).height()) RequestArticles();
-                    //else
-                    //alert("scroll!");
-                    //ScrollTo('#btn-'+id);
-                });
-            }
-
-
-            $(document).ready(function () {
-                $(window).scroll(function()
-                {
-                  // if(!bool)
-                    //alert("scroll");
-                    if (startFrom < @Model.NumberOfPages && !inProgress && ($(window).scrollTop() >= $(document).height() - $(window).height() ))
-                    {
-                       // alert("request");
-                        RequestArticles(false);
-                    }
-                });
-                var id = 0;
-                var page = 0;
-                if (location.hash.length > 0)
-                {
-                    var string = location.hash.replace('#','');
-                    var arr = string.split(':');
-                    page = arr[0];
-                    id = arr[1];
-
-                }
-               // alert("id: " + id +" page: " + page);
-                if(id > 1 && page > 1)
-                {
-                    GetNPagesOfArticles(page - 1);
-                    ScrollTo('#btn-' + id);
-                }
-               // alert("startfrom: "+ startFrom + "inprogress: " + inProgress);
-                if(startFrom < @Model.NumberOfPages && !inProgress && $(window).height() >= $(document).height())
-                {
-                    //alert("requst!");
-                    RequestArticles(true);
-                }
-                
-               
-
-
-
-                //$("a").click(function () {
-                //    var elementClick = $(this).attr("href");
-                //    var destination = $(elementClick).offset().top;
-                //    alert("href: " + elementClick);
-                //    if ($.browser.safari) {
-                //        $('body').animate({ scrollTop: destination }, 1100); //1100 - скорость
-                //    } else {
-                //        $('html').animate({ scrollTop: destination }, 1100);
-                //    }
-                //    return false;
-                //});
-
-
-
-            });
-            function ScrollTo(id)
-            {
-                var destination = $(id).offset().top;
-              //  alert (destination);
-
-                $('body').animate({ scrollTop: destination }, 1100);
-
-                $('html').animate({ scrollTop: destination }, 1100);
-
-                //return false;
-                //var body = $("html, body");
-                //body.stop().animate({scrollTop:0}, '500', 'swing', function() {
-                //    alert("Finished animating");
-                //});
-            }
-            function Redirect(id)
-            {
-                var b = document.getElementById('btn-'+id);
-                location.hash = startFrom + ':' +id;
-                // window.location("Home/Article?Id="+id);
-            }
-        </script>
-
+            alert("@Url.Action("Article")");
+            </script>
+        if (Model.alertMSG.Length > 0)
+        {
+            <script type="text/javascript">
+                alert("@Model.alertMSG");
+            </script>
+        }
+    }
+    -------------------------------*@
+<script type="text/javascript">
+   // var temp = $('#template').html();
    
+    var loadingComplete = false;
+    //var bool = false;
+    var inProgress = false;
+    var startFrom = 1;
+    var lastid = 0;
 
-</body>
-</html>
+    function RequestArticles(runAtStart) {
+
+        $.ajax({
+            url: '/Home/GetNewPageOfArticles',
+            timeout: 3000,
+            method: 'POST',
+            async: true,
+            data: { "Page": startFrom },
+            beforeSend: function () {
+                inProgress = true;
+            }
+        }).done(function (data) {
+            //  console.log(data);
+            data = jQuery.parseJSON(data);
+            if (data.length > 0) {
+                lastid =data[0].Id;
+                //console.log(data);
+                // location.hash
+                $.each(data, function (index, data) {
+                       $("#news_panel").append("<div class=\"news_item\"><h3><a id =\"" + data.Id +"\" href=\"Home/Article?id=" + data.Id+ "\" onclick=\"Redirect(" + data.Id +");\">" + data.Title + "</a></h3><span class=\"time\">" + data.CreateDate +"</span> <div><img alt=\"IMG\" class=\"images\" src=\"~/Content/UserImages/"+data.Id+"/" + data.Image +"\"/></div>");
+                    //var temp = $('#template').text;
+                });
+
+            }
+            startFrom ++;
+            location.hash=startFrom-1+':'+lastid;
+            inProgress = false;
+        });
+    }
+    function GetNPagesOfArticles(page)
+    {
+        $.ajax({
+            url: '/Home/GetNPagesOfArticles',
+            timeout: 3000,
+            method: 'POST',
+            async: true,
+            data: { "n": page  },
+            beforeSend: function () {
+                inProgress = true;
+            }
+        }).done(function (data) {
+            //alert("loaded!"+startFrom);
+            data = jQuery.parseJSON(data);
+            if (data.length > 0)
+            {
+                // console.log(data);
+
+                $.each(data, function (index, data) {
+
+                    $("#news_panel").append("<div class=\"news_item\"><h3><a id =\"" + data.Id +"\" href=\"Home/Article?id=" + data.Id+ "\" onclick=\"Redirect(" + data.Id +");\">" + data.Title + "</a></h3><span class=\"time\">" + data.CreateDate +"</span> <div><img alt=\"IMG\" class=\"images\" src=\"~/Content/UserImages/"+data.Id+"/" + data.Image +"\"/></div>");
+                });
+
+
+            }
+
+            startFrom = page + 1;
+            inProgress = false;
+            loadingComplete = true;
+
+            setTimeout(function () { ScrollTo('#btn-' + id); }, 5000);
+            //ScrollTo('#btn-' + id);
+        });
+
+    }
+
+
+    $(document).ready(function ()
+    {
+        body.append(temp);
+        $(window).scroll(function()
+        {
+            // if(!bool)
+            //alert("scroll");
+            if(loadingComplete)
+                if (startFrom < @Model.ArticleList.TotalCount && !inProgress && $(window).scrollTop() >= $(document).height() - $(window).height() - 250)
+                {
+                    //   alert("request articles!");
+                    RequestArticles(false);
+                }
+        });
+        var id = 0;
+        var page = 0;
+        if (location.hash.length > 0)
+        {
+            var string = location.hash.replace('#','');
+            var arr = string.split(':');
+            page = arr[0];
+            id = arr[1];
+
+        }
+        // alert("id: " + id +" page: " + page);
+        if(id > 1 && page > 1)
+        {
+            GetNPagesOfArticles(page - 1);
+
+
+
+
+        }
+        else loadingComplete = true;
+        // alert("startfrom: "+ startFrom + "inprogress: " + inProgress);
+        if(startFrom < @Model.ArticleList.TotalCount && !inProgress && $(window).height() >= $(document).height())
+        {
+            //alert("requst!");
+            RequestArticles(true);
+        }
+    });
+    function ScrollTo(id)
+    {
+        var destination = $(id).offset().top;
+
+        $('body').animate({ scrollTop: destination }, 500);
+        //  $('html').animate({ scrollTop: destination }, 500);
+    }
+    function Redirect(id)
+    {
+        var b = document.getElementById('btn-'+id);
+        location.hash = startFrom + ':' +id;
+    }
+</script>
+<script type="text/template" id="template">
+    <div class="news_item">
+        <h3><a id="[Id]" href="Home/Article?Id=[Id]" onclick="Redirect([Id]);">[Title]</a></h3>
+        <span class="time">[Date]</span>
+        <div><img alt="IMG" class="images" src="~/Content/UserImages/[Id]/[Image]"></div>
+    </div>
+</script>
