--- a/NewsWebSite/Views/Home/EditArticle.cshtml
+++ b/NewsWebSite/Views/Home/EditArticle.cshtml
@@ -27,7 +27,7 @@
     <br />
     <div>
         @Html.LabelFor(model => Model.Image)
-        @Html.TextBoxFor(model => model.Image, new { type = "file" })
+        @Html.TextBoxFor(model => model.Image, new { type = "file", accept = "image/jpeg,image/png,.jpg,.png", @id = "inputfile" })
         @Html.ValidationMessageFor(model => model.Image)
     </div>
     <input type="submit" name="sub" value="sub">
